# myproof

./: CMakeLists.txt  DONE  LINKS  Rapport.txt  STRUCTURE  SUBJECT  TODO
Partie3/: FuncNode.h  Makefile  Notes.txt  lex_myprof.lex  test.asm  yacc_myprof.y
deprecated/: pragma_plugin.c
deprecated/Partie3/: Makefile  lex_myprof.lex
deprecated/examples/example1/: list.c  makefile
deprecated/examples/example1-cxx/: list.cpp  makefile
deprecated/examples/rtladd/: makefile  rtladd.c
deprecated/plugin_example/: Makefile
deprecated/plugin_myprof/: makefile  myprof.c
lib/: CMakeLists.txt
lib/src/: CMakeLists.txt  mylist.h  myproof.h  start.c  stop.c
measure/: CMakeLists.txt
measure/src/: CMakeLists.txt  mylist.c  myproof_measure.h  myproof_measure_rdtsc.c  myproof_measure_start.c  myproof_measure_stop.c
measure/test/: t-foo.c
plugin/: CMakeLists.txt  PRAGMA  TODO  install.cmake-dist  makefile-old  mihp.c-old  myproof.c-old
plugin/measure/: CMakeLists.txt
plugin/measure/src/: mylist.c  mylist.h  myproof_measure.h  myproof_measure_rdtsc.c  myproof_measure_start.c  myproof_measure_stop.c
plugin/measure/test/: CMakeLists.txt  t-foo.c
plugin/src/: CMakeLists.txt  mylist.c  mylist.h  myproof.h  pass_basicblock.c  pass_bb.c  pass_edge.c  pass_function.c  pass_generic.c  pass_instrumente.c  pass_loop.c  pass_variable.c  pass_verbose.c  plugin_ends.c  plugin_error.c  plugin_init.c  plugin_params.c  plugin_pass.c  plugin_pragma.c  plugin_summary.c  pragma_instrumentation.c  pragma_instrumente.c  pragma_instrumente.h
plugin/test/: CMakeLists.txt  t-partie1.c  t-pragma-error.c  t-pragma-funcs.c  t-pragma.c  t-test.c  t-timer1.c
plugin_myprof/: makefile  makefile~  myprof.c  myprof.c~
presentation/: CMakeLists.txt  MyProof.ppt  my_package.sty  presentation.tex
presentation/images/: generate_schema.cmd  schema.dot
prof/: BuildProfile.c  BuildProfile.h  CMakeLists.txt  lex_myprof.lex  protocole.txt  test.txt  tracedyn.txt  y.tab.h  yacc_myprof.y
prof/src/: profiler.c  profiler.h
prof/test/: tracedyn.txt
profiler/: CMakeLists.txt
profiler/application/: CMakeLists.txt  myproof.py
profiler/src/: lexer.l  parser.y  profiler.c  profiler.h
profiler/test/: t-partie1.dynamic  t-partie1.static  t-pragma-funcs.dynamic  t-pragma-funcs.static  t-test.dynamic  t-test.static  t-timer1.dynamic  t-timer1.static  test.dynamic  test.static  tracedyn.txt
report/: CMakeLists.txt  Tree2.dot  critique.tex  dynamic.tex  introduction.tex  multithreading.tex  my_package.sty  pragma.tex  profiler.tex  report.tex  schema.tex  static.tex
report/images/: CallGraph.dot  ListIntances.dot  Tree1.dot  liste1.dot  t-test.cfg
test/mihp/: makefile  mihp.c  mylist.c  mylist.h  mylist_push.c
