CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(profiler)

FIND_PACKAGE(BISON)
FIND_PACKAGE(FLEX)

BISON_TARGET(MyParser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c)
FLEX_TARGET(MyScanner lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.c)

ADD_FLEX_BISON_DEPENDENCY(MyScanner MyParser)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})

MESSAGE(STATUS ${BISON_MyParser_OUTPUTS})
MESSAGE(STATUS ${FLEX_MyScanner_OUTPUTS})

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_NAME}.c ${BISON_MyParser_OUTPUTS} ${FLEX_MyScanner_OUTPUTS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} fl y)
