######################################################################################
### 1) Set the application properties
######################################################################################

# Checks cmake version compatibility
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ENABLE_LANGUAGE(C)

PROJECT(profiler)

######################################################################################


######################################################################################
### 2) Include useful features
######################################################################################

FIND_PACKAGE(BISON)
FIND_PACKAGE(FLEX)

######################################################################################


######################################################################################
### 3) Include header files path
######################################################################################

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})

######################################################################################


######################################################################################
### 4) Set compiler definitions
######################################################################################

IF(UNIX)
  # enable warnings
  ADD_DEFINITIONS( -Wall -W ) #-Wextra )
  ADD_DEFINITIONS( -O2 )
  ADD_DEFINITIONS( -fPIC )
ENDIF()

######################################################################################


######################################################################################
### 5) Create executable, link libraries and prepare target
######################################################################################

BISON_TARGET(MyParser src/parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c)
FLEX_TARGET(MyScanner src/lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.c)

ADD_FLEX_BISON_DEPENDENCY(MyScanner MyParser)

ADD_EXECUTABLE(${PROJECT_NAME} src/${PROJECT_NAME}.c ${BISON_MyParser_OUTPUTS} ${FLEX_MyScanner_OUTPUTS})

######################################################################################


######################################################################################
### 5) Where do we go now ?!?
######################################################################################

ADD_SUBDIRECTORY(application)

######################################################################################
